<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nassiansoft.watchit.ui.search.SearchViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchFragment">





        <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/search_fragment_scene">

            <LinearLayout
                android:id="@+id/search_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >



                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@={viewModel.term}"
                    />
                <Button
                    android:text="search"
                    android:id="@+id/searchButton"
                    android:onClick="@{()->viewModel.search()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"/>




            </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/searchRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/search_layout"
                    app:layout_constraintBottom_toBottomOf="parent"

                    />



        </androidx.constraintlayout.motion.widget.MotionLayout>

        <ProgressBar
            android:id="@+id/searchProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>