<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_baseline_add_24"
            android:focusable="true" />



        <FrameLayout
            android:focusable="true"
            android:clickable="true"
            android:elevation="20dp"
            android:id="@+id/splashLayout"
            android:background="@color/design_default_color_primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/splash_ImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_baseline_local_movies_24"
                app:tint="@color/white"
                />

        </FrameLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>