...
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@{movie.trackName}"
                tools:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/watchedCheckBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/artworkImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/watchedCheckBox"
...
