...
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/artWorkImageView"
            android:layout_toStartOf="@id/addImageView"
            android:ellipsize="end"
            android:lines="3"
            android:text="@{movie.longDescription}"
            tools:text="@tools:sample/lorem" />

        <ImageView
...
